--- a/06-Python-API-Challenge/Challenge - Vacation PY/VacationPy.ipynb
+++ b/06-Python-API-Challenge/Challenge - Vacation PY/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Country</th>\n      <th>Date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Ibrā’</td>\n      <td>22.6906</td>\n      <td>58.5334</td>\n      <td>78.57</td>\n      <td>37</td>\n      <td>100</td>\n      <td>2.80</td>\n      <td>OM</td>\n      <td>1618714021</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Ushuaia</td>\n      <td>-54.8000</td>\n      <td>-68.3000</td>\n      <td>51.80</td>\n      <td>58</td>\n      <td>40</td>\n      <td>11.50</td>\n      <td>AR</td>\n      <td>1618713586</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Nome</td>\n      <td>64.5011</td>\n      <td>-165.4064</td>\n      <td>33.80</td>\n      <td>75</td>\n      <td>1</td>\n      <td>6.91</td>\n      <td>US</td>\n      <td>1618713961</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Seoul</td>\n      <td>37.5683</td>\n      <td>126.9778</td>\n      <td>55.40</td>\n      <td>44</td>\n      <td>20</td>\n      <td>11.50</td>\n      <td>KR</td>\n      <td>1618713954</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Nanortalik</td>\n      <td>60.1432</td>\n      <td>-45.2371</td>\n      <td>25.16</td>\n      <td>53</td>\n      <td>0</td>\n      <td>25.41</td>\n      <td>GL</td>\n      <td>1618714021</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>549</th>\n      <td>Terrace Bay</td>\n      <td>48.7834</td>\n      <td>-87.1000</td>\n      <td>30.20</td>\n      <td>86</td>\n      <td>15</td>\n      <td>2.30</td>\n      <td>CA</td>\n      <td>1618714206</td>\n    </tr>\n    <tr>\n      <th>550</th>\n      <td>Porbandar</td>\n      <td>21.6422</td>\n      <td>69.6093</td>\n      <td>77.00</td>\n      <td>100</td>\n      <td>19</td>\n      <td>5.91</td>\n      <td>IN</td>\n      <td>1618714206</td>\n    </tr>\n    <tr>\n      <th>551</th>\n      <td>Ayan</td>\n      <td>56.4500</td>\n      <td>138.1667</td>\n      <td>28.04</td>\n      <td>89</td>\n      <td>98</td>\n      <td>4.27</td>\n      <td>RU</td>\n      <td>1618714207</td>\n    </tr>\n    <tr>\n      <th>552</th>\n      <td>Maragogi</td>\n      <td>-9.0122</td>\n      <td>-35.2225</td>\n      <td>76.21</td>\n      <td>83</td>\n      <td>92</td>\n      <td>2.68</td>\n      <td>BR</td>\n      <td>1618714207</td>\n    </tr>\n    <tr>\n      <th>553</th>\n      <td>Ekhabi</td>\n      <td>53.5102</td>\n      <td>142.9671</td>\n      <td>36.79</td>\n      <td>96</td>\n      <td>96</td>\n      <td>3.98</td>\n      <td>RU</td>\n      <td>1618714207</td>\n    </tr>\n  </tbody>\n</table>\n<p>554 rows × 9 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 2
     }
    ],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "3cb5c936cf2340948562e2fe9280565b"
+       "model_id": "4f7bb373a3874e10a23eb81d88c14534"
       }
      },
      "metadata": {}
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,6 @@
      "text": [
       "Missing cities -7.2597, -34.9075\n",
       "Missing cities 20.5022, -10.0711\n",
-      "Missing cities -15.8631, -38.8828\n",
       "Missing cities 22.6783, -3.9836\n"
      ]
     },
@@ -344,14 +343,14 @@
        "\n",
        "    Wind Speed Country        Date                             Hotel Name  \n",
        "0         3.49      BR  1618714024                Portal Pantaneiro Hotel  \n",
-       "1         3.00      ZA  1618714030                    Harbour House Hotel  \n",
+       "1         3.00      ZA  1618714030                          Abalone Lodge  \n",
        "2         3.00      AU  1618714039                    The Sebel Busselton  \n",
        "3         5.75      BR  1618714050                                         \n",
        "4         9.60      MR  1618714053                                         \n",
        "5         2.30      ZA  1618713952  Atlanticview Cape Town Boutique Hotel  \n",
        "6         5.75      BR  1618714080                    Asenza Beach Resort  \n",
        "7         9.22      QA  1618714106                        The Curve Hotel  \n",
-       "8         4.54      BR  1618714129                                         \n",
+       "8         4.54      BR  1618714129                       Pousada do Diogo  \n",
        "9         8.05      EG  1618714132                  Lamar Resort Abu Soma  \n",
        "10        6.69      MX  1618714163           City Express Lázaro Cárdenas  \n",
        "11        3.44      SA  1618714174           Park Inn by Radisson, Riyadh  \n",
@@ -359,10 +358,10 @@
        "13        8.99      ZA  1618714200                            River Lodge  \n",
        "14        9.95      ML  1618714205                                         "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>index</th>\n      <th>City</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Country</th>\n      <th>Date</th>\n      <th>Hotel Name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>14</td>\n      <td>Aquidauana</td>\n      <td>-20.4711</td>\n      <td>-55.7872</td>\n      <td>73.04</td>\n      <td>75</td>\n      <td>0</td>\n      <td>3.49</td>\n      <td>BR</td>\n      <td>1618714024</td>\n      <td>Portal Pantaneiro Hotel</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>33</td>\n      <td>Hermanus</td>\n      <td>-34.4187</td>\n      <td>19.2345</td>\n      <td>73.00</td>\n      <td>21</td>\n      <td>0</td>\n      <td>3.00</td>\n      <td>ZA</td>\n      <td>1618714030</td>\n      <td>Harbour House Hotel</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>62</td>\n      <td>Busselton</td>\n      <td>-33.6500</td>\n      <td>115.3333</td>\n      <td>71.01</td>\n      <td>57</td>\n      <td>0</td>\n      <td>3.00</td>\n      <td>AU</td>\n      <td>1618714039</td>\n      <td>The Sebel Busselton</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>96</td>\n      <td>Conde</td>\n      <td>-7.2597</td>\n      <td>-34.9075</td>\n      <td>73.40</td>\n      <td>100</td>\n      <td>0</td>\n      <td>5.75</td>\n      <td>BR</td>\n      <td>1618714050</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>105</td>\n      <td>Adrar</td>\n      <td>20.5022</td>\n      <td>-10.0711</td>\n      <td>70.12</td>\n      <td>24</td>\n      <td>0</td>\n      <td>9.60</td>\n      <td>MR</td>\n      <td>1618714053</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>119</td>\n      <td>Cape Town</td>\n      <td>-33.9258</td>\n      <td>18.4232</td>\n      <td>73.00</td>\n      <td>71</td>\n      <td>0</td>\n      <td>2.30</td>\n      <td>ZA</td>\n      <td>1618713952</td>\n      <td>Atlanticview Cape Town Boutique Hotel</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>183</td>\n      <td>Pitimbu</td>\n      <td>-7.4706</td>\n      <td>-34.8086</td>\n      <td>73.40</td>\n      <td>100</td>\n      <td>0</td>\n      <td>5.75</td>\n      <td>BR</td>\n      <td>1618714080</td>\n      <td>Asenza Beach Resort</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>263</td>\n      <td>Doha</td>\n      <td>25.2867</td>\n      <td>51.5333</td>\n      <td>78.80</td>\n      <td>25</td>\n      <td>0</td>\n      <td>9.22</td>\n      <td>QA</td>\n      <td>1618714106</td>\n      <td>The Curve Hotel</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>330</td>\n      <td>Belmonte</td>\n      <td>-15.8631</td>\n      <td>-38.8828</td>\n      <td>71.60</td>\n      <td>88</td>\n      <td>0</td>\n      <td>4.54</td>\n      <td>BR</td>\n      <td>1618714129</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>340</td>\n      <td>Safaga</td>\n      <td>26.7292</td>\n      <td>33.9365</td>\n      <td>78.80</td>\n      <td>13</td>\n      <td>0</td>\n      <td>8.05</td>\n      <td>EG</td>\n      <td>1618714132</td>\n      <td>Lamar Resort Abu Soma</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>429</td>\n      <td>Lázaro Cárdenas</td>\n      <td>17.9583</td>\n      <td>-102.2000</td>\n      <td>75.11</td>\n      <td>68</td>\n      <td>0</td>\n      <td>6.69</td>\n      <td>MX</td>\n      <td>1618714163</td>\n      <td>City Express Lázaro Cárdenas</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>460</td>\n      <td>Riyadh</td>\n      <td>24.6877</td>\n      <td>46.7219</td>\n      <td>71.60</td>\n      <td>26</td>\n      <td>0</td>\n      <td>3.44</td>\n      <td>SA</td>\n      <td>1618714174</td>\n      <td>Park Inn by Radisson, Riyadh</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>467</td>\n      <td>Álamos</td>\n      <td>27.0167</td>\n      <td>-108.9333</td>\n      <td>77.00</td>\n      <td>47</td>\n      <td>0</td>\n      <td>2.30</td>\n      <td>MX</td>\n      <td>1618714176</td>\n      <td>Hacienda De Los Santos Resort &amp; Spa</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>535</td>\n      <td>Vredendal</td>\n      <td>-31.6683</td>\n      <td>18.5012</td>\n      <td>77.38</td>\n      <td>18</td>\n      <td>0</td>\n      <td>8.99</td>\n      <td>ZA</td>\n      <td>1618714200</td>\n      <td>River Lodge</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>547</td>\n      <td>Taoudenni</td>\n      <td>22.6783</td>\n      <td>-3.9836</td>\n      <td>79.45</td>\n      <td>16</td>\n      <td>0</td>\n      <td>9.95</td>\n      <td>ML</td>\n      <td>1618714205</td>\n      <td></td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>index</th>\n      <th>City</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Country</th>\n      <th>Date</th>\n      <th>Hotel Name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>14</td>\n      <td>Aquidauana</td>\n      <td>-20.4711</td>\n      <td>-55.7872</td>\n      <td>73.04</td>\n      <td>75</td>\n      <td>0</td>\n      <td>3.49</td>\n      <td>BR</td>\n      <td>1618714024</td>\n      <td>Portal Pantaneiro Hotel</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>33</td>\n      <td>Hermanus</td>\n      <td>-34.4187</td>\n      <td>19.2345</td>\n      <td>73.00</td>\n      <td>21</td>\n      <td>0</td>\n      <td>3.00</td>\n      <td>ZA</td>\n      <td>1618714030</td>\n      <td>Abalone Lodge</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>62</td>\n      <td>Busselton</td>\n      <td>-33.6500</td>\n      <td>115.3333</td>\n      <td>71.01</td>\n      <td>57</td>\n      <td>0</td>\n      <td>3.00</td>\n      <td>AU</td>\n      <td>1618714039</td>\n      <td>The Sebel Busselton</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>96</td>\n      <td>Conde</td>\n      <td>-7.2597</td>\n      <td>-34.9075</td>\n      <td>73.40</td>\n      <td>100</td>\n      <td>0</td>\n      <td>5.75</td>\n      <td>BR</td>\n      <td>1618714050</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>105</td>\n      <td>Adrar</td>\n      <td>20.5022</td>\n      <td>-10.0711</td>\n      <td>70.12</td>\n      <td>24</td>\n      <td>0</td>\n      <td>9.60</td>\n      <td>MR</td>\n      <td>1618714053</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>119</td>\n      <td>Cape Town</td>\n      <td>-33.9258</td>\n      <td>18.4232</td>\n      <td>73.00</td>\n      <td>71</td>\n      <td>0</td>\n      <td>2.30</td>\n      <td>ZA</td>\n      <td>1618713952</td>\n      <td>Atlanticview Cape Town Boutique Hotel</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>183</td>\n      <td>Pitimbu</td>\n      <td>-7.4706</td>\n      <td>-34.8086</td>\n      <td>73.40</td>\n      <td>100</td>\n      <td>0</td>\n      <td>5.75</td>\n      <td>BR</td>\n      <td>1618714080</td>\n      <td>Asenza Beach Resort</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>263</td>\n      <td>Doha</td>\n      <td>25.2867</td>\n      <td>51.5333</td>\n      <td>78.80</td>\n      <td>25</td>\n      <td>0</td>\n      <td>9.22</td>\n      <td>QA</td>\n      <td>1618714106</td>\n      <td>The Curve Hotel</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>330</td>\n      <td>Belmonte</td>\n      <td>-15.8631</td>\n      <td>-38.8828</td>\n      <td>71.60</td>\n      <td>88</td>\n      <td>0</td>\n      <td>4.54</td>\n      <td>BR</td>\n      <td>1618714129</td>\n      <td>Pousada do Diogo</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>340</td>\n      <td>Safaga</td>\n      <td>26.7292</td>\n      <td>33.9365</td>\n      <td>78.80</td>\n      <td>13</td>\n      <td>0</td>\n      <td>8.05</td>\n      <td>EG</td>\n      <td>1618714132</td>\n      <td>Lamar Resort Abu Soma</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>429</td>\n      <td>Lázaro Cárdenas</td>\n      <td>17.9583</td>\n      <td>-102.2000</td>\n      <td>75.11</td>\n      <td>68</td>\n      <td>0</td>\n      <td>6.69</td>\n      <td>MX</td>\n      <td>1618714163</td>\n      <td>City Express Lázaro Cárdenas</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>460</td>\n      <td>Riyadh</td>\n      <td>24.6877</td>\n      <td>46.7219</td>\n      <td>71.60</td>\n      <td>26</td>\n      <td>0</td>\n      <td>3.44</td>\n      <td>SA</td>\n      <td>1618714174</td>\n      <td>Park Inn by Radisson, Riyadh</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>467</td>\n      <td>Álamos</td>\n      <td>27.0167</td>\n      <td>-108.9333</td>\n      <td>77.00</td>\n      <td>47</td>\n      <td>0</td>\n      <td>2.30</td>\n      <td>MX</td>\n      <td>1618714176</td>\n      <td>Hacienda De Los Santos Resort &amp; Spa</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>535</td>\n      <td>Vredendal</td>\n      <td>-31.6683</td>\n      <td>18.5012</td>\n      <td>77.38</td>\n      <td>18</td>\n      <td>0</td>\n      <td>8.99</td>\n      <td>ZA</td>\n      <td>1618714200</td>\n      <td>River Lodge</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>547</td>\n      <td>Taoudenni</td>\n      <td>22.6783</td>\n      <td>-3.9836</td>\n      <td>79.45</td>\n      <td>16</td>\n      <td>0</td>\n      <td>9.95</td>\n      <td>ML</td>\n      <td>1618714205</td>\n      <td></td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 9
     }
    ],
    "source": [
@@ -399,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +431,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "8adce235f77748e681d2c2a8a3d235ce"
+       "model_id": "5e059dd7266e40bba54467610e08b710"
       }
      },
      "metadata": {}
