--- a/06-Python-API-Challenge/Challenge - WeatherPY/WeatherPy.ipynb
+++ b/06-Python-API-Challenge/Challenge - WeatherPY/WeatherPy.ipynb
@@ -126,33 +126,16 @@
    "source": [
     "### Convert Raw Data to DataFrame\n",
     "* Export the city data into a .csv.\n",
-    "* Display the DataFrame"
+    "## Finding * Display the DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?appid=86289eb3958c4f5dce7e019be000fcf9&units=imperial&q=phoenix\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'Phoenix'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 11
-    }
-   ],
+   "outputs": [],
    "source": [
+    "## Finding for one city\n",
     "# # Save config information.\n",
     "# url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
     "# units = \"imperial\"\n",
