Python API - HW

--- a/06-Python-API-Challenge/Challenge - WeatherPY/WeatherPy.ipynb
+++ b/06-Python-API-Challenge/Challenge - WeatherPY/WeatherPy.ipynb
@@ -237,6 +237,8 @@
     "\n",
     "for city in cities:\n",
     "    response = requests.get(query_url + city).json()\n",
+    "    \n",
+    "    #try finding the cities and append the information to columns\n",
     "    try:\n",
     "        city1.append(response['name'])\n",
     "        Lat.append(response['coord']['lat'])\n",
@@ -247,6 +249,8 @@
     "        windspeed.append(response['wind']['speed'])\n",
     "        country.append(response['sys']['country'])\n",
     "        date1.append(response['dt'])\n",
+    "    \n",
+    "    #Skip the cities which do not have any temperature record\n",
     "    except KeyError:\n",
     "        print(f'Skipped City: {city}')\n",
     "\n",
@@ -1261,18 +1265,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Three Observing Trend:\n",
+    "\n",
+    "1. As the data is for randomly picked cities around the world the trend of humidity, windspeed, cloudiness and tempretrure will depend on the time you pull the data. \n",
+    "2. There is very less correlation between windspeed to latitude, Cloudiness to latitude and humidity to latitude. Temperature has high correlation with the latitude. \n",
+    "\n",
+    "3. I think if we can pull the data at the same time for all the cities in the world we can get a better understanding of the different relationships with the latitude. e.g. if we can pull all the data at Noon local time for all the cities then i think the data will be more useful in predicting the weather pattern. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
