Python API - HW

--- a/06-Python-API-Challenge/Challenge - Vacation PY/VacationPy.ipynb
+++ b/06-Python-API-Challenge/Challenge - Vacation PY/VacationPy.ipynb
@@ -163,7 +163,7 @@
     }
    ],
    "source": [
-    "#include screenshot of heatmap\n",
+    "#include screenshot of heatmap - Screenshot saved in Challenge - Vacation PY folder\n",
     "\n",
     "from IPython.display import Image\n",
     "Image(filename = 'humidity_heat.jpg')"
@@ -424,7 +424,7 @@
     }
    ],
    "source": [
-    "#include screenshot of heatmap\n",
+    "#include screenshot of heatmap - Screenshot saved in Challenge - Vacation PY folder\n",
     "from IPython.display import Image\n",
     "Image(filename = 'hotel_humidity.jpg')\n",
     "\n"
