--- a/09-SQL Challenge/EmployeeSQL/Bonus-Data Engineering.ipynb
+++ b/09-SQL Challenge/EmployeeSQL/Bonus-Data Engineering.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "        emp_no dept_no\n",
+       "0        10001    d005\n",
+       "1        10002    d007\n",
+       "2        10003    d004\n",
+       "3        10004    d004\n",
+       "4        10005    d003\n",
+       "...        ...     ...\n",
+       "331598  499995    d004\n",
+       "331599  499996    d004\n",
+       "331600  499997    d005\n",
+       "331601  499998    d002\n",
+       "331602  499999    d004\n",
+       "\n",
+       "[331603 rows x 2 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>emp_no</th>\n      <th>dept_no</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>10001</td>\n      <td>d005</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>10002</td>\n      <td>d007</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>10003</td>\n      <td>d004</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>10004</td>\n      <td>d004</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>10005</td>\n      <td>d003</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>331598</th>\n      <td>499995</td>\n      <td>d004</td>\n    </tr>\n    <tr>\n      <th>331599</th>\n      <td>499996</td>\n      <td>d004</td>\n    </tr>\n    <tr>\n      <th>331600</th>\n      <td>499997</td>\n      <td>d005</td>\n    </tr>\n    <tr>\n      <th>331601</th>\n      <td>499998</td>\n      <td>d002</td>\n    </tr>\n    <tr>\n      <th>331602</th>\n      <td>499999</td>\n      <td>d004</td>\n    </tr>\n  </tbody>\n</table>\n<p>331603 rows × 2 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
    "source": [
-    "engine = create_engine('postgresql://localhost:5432/EmployeeSQL')\n",
-    "# connection = engine.connect()\n"
+    "engine = create_engine('postgresql://postgres:Khu1Shi$804@localhost:5432/Employee_DB')\n",
+    "connection = engine.connect()\n",
+    "df = pd.read_sql('select * from department_employee',con=engine)\n",
+    "df"
    ]
   }
  ]
