--- a/09-SQL Challenge/EmployeeSQL/Bonus-Data Engineering.ipynb
+++ b/09-SQL Challenge/EmployeeSQL/Bonus-Data Engineering.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -59,11 +59,11 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>emp_no</th>\n      <th>dept_no</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>10001</td>\n      <td>d005</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>10002</td>\n      <td>d007</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>10003</td>\n      <td>d004</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>10004</td>\n      <td>d004</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>10005</td>\n      <td>d003</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>331598</th>\n      <td>499995</td>\n      <td>d004</td>\n    </tr>\n    <tr>\n      <th>331599</th>\n      <td>499996</td>\n      <td>d004</td>\n    </tr>\n    <tr>\n      <th>331600</th>\n      <td>499997</td>\n      <td>d005</td>\n    </tr>\n    <tr>\n      <th>331601</th>\n      <td>499998</td>\n      <td>d002</td>\n    </tr>\n    <tr>\n      <th>331602</th>\n      <td>499999</td>\n      <td>d004</td>\n    </tr>\n  </tbody>\n</table>\n<p>331603 rows × 2 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 5
     }
    ],
    "source": [
-    "engine = create_engine('postgresql://postgres:Khu1Shi$804@localhost:5432/Employee_DB')\n",
+    "engine = create_engine('postgresql://user:password@localhost:5432/Employee_DB')\n",
     "connection = engine.connect()\n",
     "df = pd.read_sql('select * from department_employee',con=engine)\n",
     "df"
