--- a/09-SQL Challenge/EmployeeSQL/Bonus-Data Engineering.ipynb
+++ b/09-SQL Challenge/EmployeeSQL/Bonus-Data Engineering.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('postgresql://postgres:tap$19761@localhost:5432/Employee_DB')\n",
+    "engine = create_engine('postgresql://username:password@localhost:5432/Employee_DB')\n",
     "connection = engine.connect()\n"
    ]
   },
