app first commit

--- a/10-SQLalchemy-Challenge/climate_starter.ipynb
+++ b/10-SQLalchemy-Challenge/climate_starter.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 33
     }
    ],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -216,14 +216,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 36
     }
    ],
    "source": [
     "# Find the most recent date in the data set.\n",
     "first_date = sessions.query(Measurement.date).\\\n",
     "    order_by(Measurement.date.desc()).first()\n",
-    "first_date"
+    "first_date\n"
    ]
   },
   {
@@ -255,6 +255,7 @@
     "    order_by(Measurement.date.desc()).first()\n",
     "    \n",
     "# Calculate the date one year from the last date in data set.\n",
+    "\n",
     "query_date = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n",
     "query_date\n",
     "\n",
