--- a/10-SQLalchemy-Challenge/temp_analysis_bonus_2_starter.ipynb
+++ b/10-SQLalchemy-Challenge/temp_analysis_bonus_2_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,50 +45,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create engine to hawaii.sqlite\n",
-    "engine = create_engine(\"sqlite:///hawaii.sqlite\")"
+    "engine = create_engine(\"sqlite:///./Resources/hawaii.sqlite\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
+    "Base = automap_base()\n",
     "\n",
-    "# reflect the tables"
+    "# reflect the tables\n",
+    "Base.prepare(engine, reflect=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['measurement', 'station']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
    "source": [
-    "# View all of the classes that automap found\n"
+    "# View all of the classes that automap found\n",
+    "Base.classes.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save references to each table"
+    "# Save references to each table\n",
+    "Measurement = Base.classes.measurement\n",
+    "Station = Base.classes.station"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB"
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)"
    ]
   },
   {
@@ -100,9 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[(62.0, 69.57142857142857, 74.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "# This function called `calc_temps` will accept start date and end date in the format '%Y-%m-%d' \n",
     "# and return the minimum, maximum, and average temperatures for that range of dates\n",
@@ -126,12 +151,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[(58.0, 74.56535362578335, 87.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the function `calc_temps` to calculate the tmin, tavg, and tmax \n",
-    "# for a year in the data set"
+    "# for a year in the data set\n",
+    "print(calc_temps('2016-08-09', '2017-08-01'))"
    ]
   },
   {
@@ -249,9 +283,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python385jvsc74a57bd0766ba92417ffdb3041f7560727c394ed6f11aea40f800978e891db1c0f44e095",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -263,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
